updated photobook, learning in public, and scrapbook

--- a/doqmeat/learning/bash/index.html
+++ b/doqmeat/learning/bash/index.html
@@ -43,12 +43,16 @@
 
 		</ul>
 		<h3>notes</h3>
-		<p>you can use logical operators like <code>&&</code> (AND) and <code>||</code> (OR). not really sure in what case i would use OR, but i use AND frequently for executing multiple commands at once.</p>
-		<p>you can hit <code>tab</code> and the terminal will (try to) autocomplete where ever directory or file you want to go.</p>
-		<p>when typing a file that has an ! you need to escape it using the backslash. if i have a folder called <b>!g/</b> then you would write <code>\!g/</code> on the terminal.</p>
-		<p>files with spaces need to be closed with single or double quotes like this <code>'folder 1'</code></p>
-		<p>use <code>q</code> to quit some scripts</p>
-		<p><code>&gt;&gt;</code> this is an append. <code>|</code> this is a pipe</p>
+		<ol>
+			<li>you can use logical operators like <code>&&</code> (AND) and <code>||</code> (OR). not really sure in what case i would use OR, but i use AND frequently for executing multiple commands at once.</li>
+			<li>you can hit <code>tab</code> and the terminal will (try to) autocomplete where ever directory or file you want to go.</li>
+			<li>when typing a file that has an ! you need to escape it using the backslash. if i have a folder called <b>!g/</b> then you would write <code>\!g/</code> on the terminal.</li>
+			<li>files with spaces need to be closed with single or double quotes like this <code>'folder 1'</code></li>
+			<li>use <code>q</code> to quit some scripts</li>
+			<li><code>&gt;&gt;</code> this is an append. <code>|</code> this is a pipe</li>
+			<li>under <code>~/.profile</code> you can set up variables for paths you frequently use.<a href="path-shortcuts.jpg" target="_blank">img of my .profile</a>, you can use them in the terminal as variables using this <code>$</code> symbol. example: <code>cd $DOQMEAT</code></li>
+		</ol>
+
 		<h2>git</h2>
 
 		<ul>
