--- a/doqmeat/learning/javascript/index.html
+++ b/doqmeat/learning/javascript/index.html
@@ -26,14 +26,18 @@
 		<h2>navigation</h2>
 		<nav>
 			<ul>
-				<li><a href="practice.html">thoughts n cheatsheet</a> - where i put what i've learned.</li>
-				<li><a href="freecodecamp-1.html">freecodecamp exercise 1</a> - learn basic JS by building a RPG, <b>shelved</b></li>
-				<li><a href="smarter-way/index.html">a smarter way to learn JS</a> - book, <b>archived</b></li>
+				<li><a href="thoughts.html">thoughts</a> - where i put what i've learned.</li>
 			</ul>
-			<h3>links</h3>
+			<h4>archived - won't be updating</h4>
 			<ul>
-				<li><a href="https://javascript.info" target="_blank">javascript.info</a></li>
+				<li><a href="freecodecamp-1.html">freecodecamp exercise 1</a> - learn basic JS by building an RPG</li>
+				<li><a href="smarter-way/index.html">a smarter way to learn JS</a> - book</li>
+			</ul>
+			<h3>resources i use</h3>
+			<ul>
+				<li><a href="https://javascript.info" target="_blank" class="outlink">javascript.info</a></li>
 				<li><a href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript" class="outlink" target="_blank">mozilla's learn JS</a></li>
+				<li><a href="https://marketplace.visualstudio.com/items?itemName=WallabyJs.quokka-vscode" target="_blank" class="outlink">quokka.js</a></li>
 			</ul>
 		</nav>
 
@@ -53,7 +57,7 @@
 		<br>
 		<b>last updated on: 22.nov.24</b>
 		<br>
-		<a href="../index.html">projects</a> / <a href="/">home</a> / <a href="#">top</a>
+		<a href="../index.html">learning in public</a> / <a href="/">home</a> / <a href="#">top</a>
 	</footer>
 </body>
 
