--- a/doqmeat/photobook/index.html
+++ b/doqmeat/photobook/index.html
@@ -51,11 +51,19 @@ coded with love by des
 			<img src="" alt="">
 				<div class="hov">
 					<p class="caption">
-						hiii this is a caption
+						hiii this is a caption</p>
 					</div>
 				</div>
 			</div>
 -->
+
+		<div class="pic phone">
+			<img src="!g/250725-mush.jpg" alt="mushroom">
+			<img src="!g/250725-mush2.jpg" alt="2 mushrooms on the grass">
+			<div class="hov">
+				<p class="caption">to me, seeing mushrooms outside is like seeing angels.<br><b>taken on 25.jul.25</b></p>
+			</div>
+		</div>
 
 		<div class="pic phone">
 			<img src="!g/250609-flowers.jpg" alt="a picture of some pink flowers with a bit of a grey sky in the background">
@@ -457,7 +465,7 @@ coded with love by des
 	<div id="home"><a title="go back to homepage" href="/"><img src="/!g/pix/polaroid_5.gif"></a></div>
 
 	<footer>
-		please <u>don't</u> use my pics without my permission! <img src="/!g/pix/cam-shoot.gif"> <b>last updated: 06.apr.25</b>
+		please <u>don't</u> use my pics without my permission! <img src="/!g/pix/cam-shoot.gif"> <b>last updated: 25.jul.25</b>
 		<br>
 		<b>credit:</b> bg by <a href="http://sozaioukoku.fc2web.com/index.html" target="_blank">sozaioukoku</a> / header font by <a href="https://www.dafont.com/growing-garden-script.font" target="_blank">helotype</a> / border-img from <a href="https://fujoshi.nekoweb.org" target="_blank">mimi</a>!
 		<br>
