some refactoring in the script

--- a/doqmeat/art/index.html
+++ b/doqmeat/art/index.html
@@ -18,7 +18,22 @@
   <aside id="sidebar">
     <h1>doqmeat's silly art</h1>
     <p>i will also include here some other projects that aren't drawings!</p>
-    <p><b>tools:</b> clip studio paint + HP convertible laptop w/ stylus + chromatek watercolor brush pens</p>
+    <details>
+      <summary>info</summary>
+      <p>i've been drawing ever since i was little but it's always been on n off! specially nowadays. i mostly just draw fanart, i've never been one of having OCs tbh.</p>
+    </details>
+    <details>
+      <summary>tools</summary>
+      <h4>digital</h4>
+      <ul>
+        <li>clip studio paint</li>
+        <li>HP convertible laptop w/ stylus</li>
+      </ul>
+      <h4>traditional</h4>
+      <ul>
+        <li>chromatek watercolor brush pens</li>
+      </ul>
+    </details>
     <nav>
       <h3>type</h3>
       <button id="default" onclick="showCat('box')">all</button>
@@ -38,17 +53,22 @@
       <button onclick="showCat('2022')">2022</button>
       <button onclick="showCat('2023')">2023</button>
       <button onclick="showCat('2024')">2024</button>
+      <button onclick="showCat('2025')">2025</button>
     </nav>
 
     <hr>
     <center>
       <p><a href="#">top</a> / <a href="/">home</a> / <a href="/sitemap">sitemap</a></p>
-      <p>last updated on 11.nov.24</p>
+      <p>last updated on 27.jul.25</p>
       <p><b>credit:</b> <a href="/notebook/resources/fonts.html">fonts</a> used: momo, basiic</p>
     </center>
   </aside>
 
   <main>
+    <img id="rainbowcat" src="!g/drawings/250727-rainbow-meow.png" alt="a rainbow cat" class="box 2025 doodle" loading="lazy">
+    <div id="rainbowcat-caption" class="captions">
+      <p>a rainbow cat i did for more portfolio-ish site of mine! :p</p>
+    </div>
     <img loading="lazy" id="lucy" src="!g/collage/lucy.jpg" alt="collage of kpop band lucy" class="box journal 2021">
     <div id="lucy-caption" class="captions">
       <p>a collage of kpop band lucy done with the inclusions from <i>blue</i></p>
