--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -76,14 +76,14 @@ you're free to take whatever you need from my site, but please refrain from taki
 			<a class="p" href="/journal">journal</a>
 			<a class="p" href="/microblog">microblog</a>
 			<a class="p" href="/blog">blog</a>
-			<a class="p" href="/fashion">fashion</a>
-			<a class="p" href="/scrapbook">scrapbook</a>
+			<a class="p" href="/fashion">fashion <img src="!g/pix/updated1.gif" alt="page updated"></a>
+			<a class="p" href="/scrapbook">scrapbook <img src="!g/pix/updated1.gif" alt="page updated"></a>
 			<a class="p" href="/shrines">shrines</a>
 			<a class="p" href="/collection">collections</a>
 			<a class="p" href="/art">art &amp; crafts</a>
 
 			<h3>media</h3>
-			<a class="m" href="/music">music <img src="!g/pix/updated1.gif" alt="page updated"></a>
+			<a class="m" href="/music">music</a>
 			<a class="m" href="/vgs">video games <img src="!g/pix/updated1.gif" alt="page updated"></a>
 			<a class="m" href="/tv">tv</a>
 			<a class="m" href="/reading">reading</a>
@@ -93,9 +93,9 @@ you're free to take whatever you need from my site, but please refrain from taki
 			<a class="o" href="/faq">FAQ</a>
 
 			<h3>sitely</h3>
-			<a href="/info" class="s">info</a>
+			<a href="/info" class="s">info <img src="!g/pix/new1.gif" alt="new page"></a>
 			<a class="s" href="/sites">button wall</a>
-			<a class="s" href="/notebook">resources</a>
+			<a class="s" href="/notebook">resources <img src="!g/pix/updated1.gif" alt="page updated"></a>
 			<a class="s outlink" href="https://doqmeat.atabook.org/">guestbook</a>
 			<a class="s outlink" href="https://neocities.org/site/doqmeat" target="_blank">neocities profile</a>
 			<a class="s outlink" title="github repository" href="https://github.com/doqmeat/doqmeat.com" target="_blank">source code</a>
