--- a/doqmeat/music/mini-pages/featured.html
+++ b/doqmeat/music/mini-pages/featured.html
@@ -73,7 +73,7 @@
 
 		<details open>
 			<summary>
-				<span class="date">16.jul.25 - ? : ruder buster / troy</span>
+				<span class="date">16.jul.25 - ? :</span> ruder buster / troy
 			</summary>
 			<table>
 				<td class="t-left">
