--- a/doqmeat/music/mini-pages/kpop-producers.html
+++ b/doqmeat/music/mini-pages/kpop-producers.html
@@ -42,10 +42,7 @@
 	<main>
 
 		<h1>fav kpop producers</h1>
-		<p><small>
-				<center>currently a work in progress!</center>
-			</small></p>
-		<p>i feel like these people often get overlooked by the kpop community a lot when they are the ones that bring kpop music to life. one day i was bored as hell and decided to compile a list of producers whose style i like and my favorite songs from them <img src="/!g/pix/cat-music.gif"></p>
+		<p>i feel like these people often get overlooked by the kpop community a lot when they are the ones that bring kpop music to life. one day i was bored as hell and decided to compile a list of producers whose style i like and my favorite songs from them <img src="/!g/pix/cat-music.gif"> you can be shit at singing but if it has a good beat i'll listen to anything.</p>
 
 		<!--  <p class="key">key: artist, <a class="song" href="/">song</a>, <b>highlighted producers</b></p>-->
 
@@ -72,10 +69,10 @@
 		<p>you know a song is gonna be good when it has that "AAAAH AH!" (their producer tag!) in the intro / <a href="https://www.instagram.com/p/CSEY0kKF_cO/?hl=en">instagram</a></p>
 		<p><mark>highlighted producers: <b>영광의 얼굴들 (glory face), 진리 (jinli), HARRY</b></mark></p>
 		<ul>
-			<li>DRIPPIN's <i>nostalgia</i></li>
-			<li>kep1er's <i>UP!</i></li>
-			<li>JO1's <i>touch!</i></li>
-			<li>Golden Child's <i>spell</i> - <b>영광의 얼굴들</b>, <b>진리</b>, Jake K (ARTiffect)</li>
+			<li>DRIPPIN's <a class="song" href="https://youtu.be/BdUCdh7ff9I?si=WO7TBErmcG-WaeTI" target="_blank">nostalgia</a></li>
+			<li>kep1er's <a class="song" href="https://youtu.be/hr-325mclek?si=24frQFf6gyY3Dcz2" target="_blank">UP!</a></li>
+			<li>JO1's <a class="song" href="https://youtu.be/-CTsSlWj7KM?si=3C8naitBpBCitLZo" target="_blank">touch!</a></li>
+			<li>Golden Child's <a class="song" href="https://youtu.be/MDYT7gNu-K8?si=ykSC31myooLX1pfq" target="_blank">spell</a> - <b>영광의 얼굴들</b>, <b>진리</b>, Jake K (ARTiffect)</li>
 		</ul>
 
 		<h3 id="monotree">MonoTree</h3>
@@ -84,54 +81,56 @@
 		<ul>
 			<li><b>G-High</b>
 				<ul>
-					<li>moonbin and sanha's <i>bad idea</i></li>
-					<li>odd eye circle's <i>loonatic / my secret playlist / sweet crazy love</i></li>
+					<li>moonbin and sanha's <a class="song" href="https://youtu.be/K0oSaCS0_98" target="_blank">bad idea</a></li>
+					<li>odd eye circle's <a class="song" href="https://youtu.be/XznW8Ti6WWk" target="_blank">loonatic</a> / <a class="song" href="https://youtu.be/ZkthIE3bl8k" target="_blank">my secret playlist</a> / <a class="song" href="https://youtu.be/cG7FkoNKBzI" target="_blank">sweet crazy love</a></li>
 				</ul>
 			</li>
 			<li><b>Hyun Hwang (황현)</b>
 				<ul>
-					<li>X1's <i>stand up</i></li>
-					<li>loona 1/3's <i>valentine girl</i></li>
+					<li>X1's <a class="song" href="https://youtu.be/rUEJBYh1v88" target="_blank">stand up</a></li>
+					<li>loona 1/3's <a class="song" href="https://youtu.be/uRlVjUl2iD4" target="_blank">valentine girl</a></li>
 				</ul>
 			</li>
-			<li>DRIPPIN's <i>young blood</i> prod. by <b>inner child, pdly, 김해론</b></li>
+			<li>DRIPPIN's <a class="song" href="https://youtu.be/ghHgChwdIYE" target="_blank">young blood</a> - <b>inner child, pdly, 김해론</b></li>
 		</ul>
 
 		<h3>stardust</h3>
 		<p><small>thank you to <a href="https://johndavid.neocities.org" target="_blank">JohnDavid</a> for the info of this team since for the longest time i thought it was just 1 person! i still sadly don't really have a way of knowing which individuals worked on each song but i will still list the members below.</small></p>
 		<p><mark>producers: 임유섭 (Im Yuseop), 이상훈 (Lee Sanghoon), 박용성 (Park Yongseong), Jenny Hong, 88kief, 심재환 (Shim Jaehwan)</mark></p>
 		<ul>
-			<li>drippin's <i>utopia</i></li>
-			<li>lovelyz's <i>obliviate</i></li>
+			<li>drippin's <a class="song" href="https://youtu.be/pRTANHJxVis" target="_blank">utopia</a></li>
+			<li>lovelyz's <a class="song" href="https://youtu.be/9GUqqRzIZgw" target="_blank">obliviate</a></li>
 		</ul>
 
 		<h2 id="solo">individual producers</h2>
 
 		<h3>TAK</h3>
-		<p>former member of <b>NEWTYPE</b>, he is currently listed as a collaborator on their website.</p>
-		<p>i have the knowledge that he started music production with rhythm games but i don't remember the source of this so take this a grain of salt. will put a link here once i find it.</p>
+		<p>former member of <b>NEWTYPE</b>, he is currently listed as a collaborator on their website. now part of a group called <b>DORIDORI</b>. i was honestly a bit sad when i found out he left NEWTYPE so i no longer won't get any kpop songs with his sauce BUT i think him becoming a (mainly) vocaloid producer and just getting off kpop to do his own thing was a great tradeoff. you can really hear his sound shine in these types of works. one of my fav electronic producers nowadays.</p>
+		<p>i have the knowledge that he started music production with rhythm games but i don't remember the source of this so take this a grain of salt. <small>will put a link here once i find it.</small> / <a href="https://zero925.notion.site/TAK-WORKS-4b8614c36d1741088ed95fdc36ae319d" target="_blank">tak's notion site</a> / <a href="https://www.instagram.com/tak_drdr/?hl=en" target="_blank">instagram</a></p>
 		<ul>
 			<li>qwer's <a class="song" href="https://youtu.be/MZ5lkYhm6xQ?si=O3uI82FDeYDMxPi-" target="_blank">discord remix</a></li>
 			<li><a class="song" href="https://youtu.be/5l8VZEyNRH8?si=ALws2w_fV7tVqVw2" target="_blank">lemon melon cookie</a></li>
 			<li><a class="song" href="https://youtu.be/N_vYUNEktsA?si=WC1K93sy6kAME_NQ" target="_blank">dkbk</a></li>
+			<li><a class="song" href="https://youtu.be/D5s8U3IDfwI" target="_blank">bavaroa</a></li>
 		</ul>
 
-		<hr>
-		<p>not sure if these are teams or individuals tbh. i don't have a lot of info about them!</p>
-
 		<h3>BADD</h3>
+		<p>producer currently chief music director of modhaus. / <a href="https://www.instagram.com/baddbybadd" target="_blank">instagram</a></p>
 		<ul>
-			<li>loona - colors</li>
+			<li>loona's <a class="song" href="https://www.youtube.com/watch?v=XGxLAh-1xTY" target="_blank">colors</a> - collaborators: Hailey Collier, Noémie Legrand, Dan Gleyzer</li>
+			<li>loona's <a class="song" href="https://youtu.be/AFJPFfnzZ7w?si=IDL26_gRmPivvg8S" target="_blank">favOriTe</a> - collaborators: Sophia Pae, Slyberry (슬라이베리), Kim Jin-hyung (김진형)</li>
 		</ul>
 
 		<h3>l'emon</h3>
+		<p>songwriter and lyricist part of 153/joombas music group. not exactly a producer but i might as well keep her here for her great contributions to society / <a href="https://www.instagram.com/lemon_204" target="_blank">instagram</a></p>
 		<ul>
-			<li>weki meki - metronome</li>
+			<li>loona - <a class="song" href="https://youtu.be/WhmlNt42pjk?si=pZtNINK5B_VjpnDx" target="_blank">oh(yes i am)</a></li>
+			<li>weki meki - <a class="song" href="https://youtu.be/-A__WBYT59M?si=VLKPXhdrPkJM-NeX" target="_blank">metronome</a></li>
 		</ul>
 
 	</main>
 	<footer>
-		<b>last updated on 28.jun.25</b>
+		<b>last updated on 27.jul.25</b>
 		<br>
 		<a href="#">top</a> <span class="emoji2"></span> <a href="/music">music</a> <span class="emoji2"></span> <a href="/">home</a> <span class="emoji2"></span> <a href="/sitemap.html">sitemap</a>
 	</footer>
