updated poll so now the link opens in a new tab. yay

--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -68,6 +68,7 @@
 
     <div id="updates" class="box">
       <h3>updates</h3>
+      <p><b>27.jul.25</b> - <a href="mini-pages/kpop-producers.html" target="mainframe">kpop producers</a> page is no longer a WIP :) need to add some more collaborators to songs but it is mostly done <small>for now since i will keep updating it with time.</small></p>
       <p><b>16.jul.25</b> - new featured music!</p>
       <p><b>06.jul.25</b> - added <i>PMMM the movie OST</i> to <a href="cds/index.html">cd collection</a> + added a spinning cd to every album on hover!</p>
       <p><b>02.jul.25</b> - new featured music :3 + added <i>11100011</i> to <a href="fav-albums/index.html">fav-albums</a> and to <a href="cds/index.html">cd collection</a></p>
@@ -107,7 +108,7 @@
 
     <div id="poll" class="box">
       <h3>is he listening?</h3>
-      <form method="post" action="https://poll.pollcode.com/18957215">
+      <form method="post" target="_blank" action="https://poll.pollcode.com/18957215">
         <div style="display:inline-block;padding:0px;width:135px;color:#000000;"><input type="radio" name="answer" value="1" id="answer189572151" style="float:left;" /><label for="answer189572151" style="float:left;width:110px;">yes</label>
           <div style="clear:both;height:2px;"></div><input type="radio" name="answer" value="2" id="answer189572152" style="float:left;" /><label for="answer189572152" style="float:left;width:110px;">no</label>
           <div style="clear:both;height:2px;"></div>
