--- a/doqmeat/vgs/games/infinity-nikki/index.html
+++ b/doqmeat/vgs/games/infinity-nikki/index.html
@@ -66,11 +66,21 @@
     <nav class="info"><b>navigation: </b><a href="#logs">logs</a> / <a href="#screenshots">screenshots</a> / <a href="#outfits">fav outfits</a></nav>
 
     <h3 id="logs">logs</h3>
-    <!-- add pics -->
+    <p><span class="date">28.jul.25</span> nikki season coming to an end! i was so happy when i got this outfit OMGGGGGG</p>
+    <img src="250728-white-moth.jpg" alt="nightlight whispers" width="100%">
+    <p>i love the moth look of it so much....</p>
+    <details>
+      <summary>i also acquired the hair of the other outfit in the same gacha which i also loved it very much but i found it a bit of a pain to dye because of it's limited areas.</summary>
+      <img src="250728-dye1.jpg" alt="dyeing nikki's hair" width="100%">
+      <img src="250728-dye2.jpg" alt="dyeing nikki's hair" width="100%">
+    </details>
+    <p>i had no clue what to do woth it so i just dyed it purple and ran with it. i ended up creating an outfit based on the month accesories. i recently got the shrinking outfit too which i love the dress for it so so much!!! i decided to use it for this and made some sort of purple nikki moth fit. so lovely.</p>
+    <img src="250728-moth-nikki-2.jpg" alt="purple moth" width="100%">
+    <hr>
     <p><span class="date">20.jul.25</span> still playing through the main story and can i just say that i love the pieceys very very much.</p>
-    <center><img src="250720-pieceys.jpg" alt="" width="100%"></center>
+    <center><img src="250720-pieceys.jpg" alt="selfie with some pieceys" width="100%"></center>
     <p>i find them so unique and adorable. their arc has been possibly my favorite one so far from the main story quest. i also really the abandoned district area quite a lot as well, i like the verticality to it. and i kinda get it but i do wish i could use the gliding ability outside of that place.</p>
-    <figure><img src="250720-beanie.jpg" alt="">
+    <figure><img src="250720-beanie.jpg" alt="beanie my goat">
       <figcaption><b>beanie</b> is my favorite piecey OF COURSE...</figcaption>
     </figure>
     <hr>
@@ -121,6 +131,10 @@
 
     <h3 id="screenshots">screenshots</h3>
     <figure>
+      <img src="250728-moth-nikki.jpg" alt="purple moth">
+      <figcaption>i had a lot of fun dying this outfit... my little purple moth</figcaption>
+    </figure>
+    <figure>
       <img src="250720-this-diva.jpg" alt="">
       <figcaption>quick shoutout to this diva for helping me out with a quest!</figcaption>
     </figure>
@@ -142,7 +156,8 @@
 
     <h3 id="outfits">fav outfits</h3>
     <center>
-      <img src="250720-black-fit.jpg" alt="" width="49%">
+      <img src="250725-purple-moth.jpg" alt="purple moth" width="49%">
+      <img src="250720-black-fit.jpg" alt="crop top and a black skirt" width="49%">
       <img title="tried to do a green and orange combo here" src="250719-orange-green.jpg" alt="" width="49%">
       <img title="i'm like really obssesed with green in this game omg" src="250719-peach.jpg" alt="" width="49%">
       <img title="the mushroom overall OMGGG" src="250708-mushrooms.jpg" alt="infinity nikki screenshots" width="49%">
