--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -43,12 +43,12 @@
 
       <h4>mini-pages</h4>
       <a href="mini-pages/info.html" target="mainframe">info</a>
-      <a href="listening-log/index.html" target="mainframe">listening logs</a>
       <a href="mini-pages/featured.html" target="mainframe">featured music</a>
-      <a href="mini-pages/playlists.html" target="mainframe">playlists</a>
+      <a href="listening-log/index.html" target="mainframe">listening logs</a>
+      <a href="recaps/index.html" target="mainframe">yearly recaps</a>
       <a href="concerts/index.html" target="mainframe">concerts</a>
       <a href="mini-pages/kpop-producers.html" target="mainframe">fav kpop producers</a>
-      <a href="recaps/index.html" target="mainframe">yearly recaps</a>
+      <a href="mini-pages/playlists.html" target="mainframe">playlists</a>
       <a href="mini-pages/links.html" target="mainframe">related links</a>
 
       <h4>other</h4>
@@ -68,6 +68,7 @@
 
     <div id="updates" class="box">
       <h3>updates</h3>
+      <p><b>28.jul.25</b> - 6 months later i wrote my <a href="recaps/2024/index.html" target="mainframe">2024 recap</a></p>
       <p><b>27.jul.25</b> - <a href="mini-pages/kpop-producers.html" target="mainframe">kpop producers</a> page is no longer a WIP :) need to add some more collaborators to songs but it is mostly done <small>for now since i will keep updating it with time.</small></p>
       <p><b>16.jul.25</b> - new featured music!</p>
       <p><b>06.jul.25</b> - added <i>PMMM the movie OST</i> to <a href="cds/index.html">cd collection</a> + added a spinning cd to every album on hover!</p>
