--- a/doqmeat/music/recaps/index.html
+++ b/doqmeat/music/recaps/index.html
@@ -24,7 +24,11 @@
 
 		<h2>yearly recaps</h2>
 		<p>every year i make a like a music summary with my top songs of the year, albums, favorite finds, and more!</p>
-		<p><a href="2023/index.html" target="_parent">2023</a> <span class="emoji2"></span> <a href="2022/index.html" target="_parent">2022</a></p>
+		<ul>
+			<li><a href="2024/index.html">2024</a></li>
+			<li><a href="2023/index.html" target="_parent">2023</a></li>
+			<li><a href="2022/index.html" target="_parent">2022</a></li>
+		</ul>
 
 	</div>
 
