updated button wall

--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -103,7 +103,7 @@
 			<a title="marcika - awesome little site who's youtube channel is very charming to watch! also love the webmaster's cat!" href="https://marcika.club/" target="_blank"><img src="!g/marcika.club.gif" alt="marcika.club"></a>
 			<a title="pp - i love their oc" href="https://churupan.neocities.org/" target="_blank"><img src="!g/churupan.gif" alt="churupan"></a>
 			<a title="dryad - cozy site" href="https://cyberneticdryad.neocities.org/" target="_blank"><img src="!g/cyberneticdryad.gif" alt="cyberneticdryad"></a>
-			<a title="kirsten - very minimalistic and nice site!" href="https://10kph.neocities.org/" target="_blank"><img src="!g/10kph.png" alt="10kph"></a>
+			<a title="kirsten - very minimalistic and nice site!" href="https://karma.computer" target="_blank"><img src="!g/10kph.png" alt="10kph"></a>
 			<a title="jasmine - lovely on the eyes and i love how responsive it is!" href="https://jasm1nii.xyz/" target="_blank" rel="external"><img src="!g/jasm1nii.png" alt="jasmine's journal" style="outline: 1px solid gray; image-rendering: pixelated;" width="88" height="31"></a>
 			<a href="https://irony-machine.neocities.org/" target="_blank"><img src="!g/irony-machine.png"></a>
 			<a title="sylum" href="https://sylum.web.fc2.com/" target="_blank"><img src="!g/sylum.gif" alt="sylum"></a>
@@ -192,7 +192,6 @@
 			<a href="https://zucchini.cc" target="_blank"><img src="!g/zucchini.gif" alt="zucchini.cc"></a>
 			<a href="https://nerucom.neocities.org" target="_blank"><img src="!g/nerucom.gif" alt="nerucom"></a>
 			<a title="virtuagirl" href="https://www.virtuagirl.net/" target="_blank"><img src="!g/virtuagirl.gif" alt="virtuagirl"></a>
-			<a href="https://maria.town" target="_blank"><img src="!g/maria.town.png" alt="maria.town"></a>
 			<a title="so colorful and wonderful" href="https://syntheticfruits.neocities.org" target="_blank"><img src="!g/syntheticfruits.gif" alt="syntheticfruits"></a>
 			<a title="vexcharm" href="https://vexcharm.net" target="_blank"><img src="!g/vexcharm.net.gif" alt="vexcharm"></a>
 			<a title="bleu" href="https://bleu.nekoweb.org/" target="_blank"> <img src="https://files.catbox.moe/ofivcj.gif" /></a>
@@ -216,7 +215,6 @@
 			<a href="https://petyou.neocities.org/" target="_blank"><img src="!g/petyou.jpg" alt="petyou"></a>
 			<a href="https://pastelhello.com/" target="_blank"><img src="!g/pastelhello.png"></a>
 			<a title="miserabledolly - such a nice aesthetic going on here!" href="https://miserabledolly.neocities.org/" target="_blank"><img src="!g/miserabledolly.gif" alt="miserabledolly"></a>
-			<a href="https://strawberryreverie.neocities.org" target="_blank"><img src="!g/strawberryreverie.gif" alt="strawberryreverie"></a>
 			<a title="anita - lovely site and personality!" href="https://taami.neocities.org/" target="_blank"><img src="!g/taami.gif" alt="taami"></a>
 			<a href="https://visualculture.vc/" target="_blank"><img src="!g/visualculture.png" alt="visualculture"></a>
 			<a title="i wish you roses - amazing web design! such a fun and interactive site" href="https://iwishyouroses.neocities.org/" target="_blank"><img src="!g/iwishyouroses.png" alt="i wish you roses"></a>
@@ -234,6 +232,9 @@
 			<a title="nic" href="https://51db.neocities.org/" target="_blank"><img src="!g/51db.gif" alt="51db"></a>
 			<a title="vy" href="https://spoonful.neocities.org" target="_blank"><img src="!g/spoonful.png" alt="spoonful"></a>
 			<a title="callie" href="https://tectrix.neocities.org/" target="_blank"><img src="!g/tectrix.gif" alt="tectrix"></a>
+			<a href="https://humanfinny.neocities.org" target="_blank"><img src="!g/humanfinny.gif" alt="humanfinny"></a>
+			<a href="https://softscars.neocities.org/" target="_blank"><img src="https://softscars.neocities.org/buttons/ssbutton.png" alt="softscars"></a>
+			<a href="https://evilperson.neocities.org/" target="_blank"><img src="!g/evilperson.gif" alt="evilperson"></a>
 		</div>
 
 		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
@@ -253,7 +254,12 @@
 			<a href="https://thalita.dev" target="_blank">thalita.dev</a> /
 			<a href="https://xobyte.org/" target="_blank">xobyte</a> /
 			<a href="https://gilest.org/index.html" target="_blank">gilest.org</a> /
-			<a href="https://smile4anything.com/" target="_blank">smile4anything</a>
+			<a href="https://smile4anything.com/" target="_blank">smile4anything</a> /
+			<a href="http://peepo.neocities.org" target="_blank">peepo</a> /
+			<a href="https://l0r3z.net" target="_blank">l0rez</a> /
+			<a href="https://catmothcrow.neocities.org/" target="_blank">catmothcrow</a> /
+			<a href="https://jessiechannel.neocities.org/" target="_blank">jessiechannel</a> /
+			<a href="https://jackieis.online/" target="_blank">jackieis.online</a>
 		</p>
 
 		<h3><img src="/!g/pix/icon_k_clover1.gif"> others</h3>
@@ -334,7 +340,7 @@
 		<a href="https://read-nekojiru.neocities.org/"><img src="!g/read-nekojiru.gif" alt="read-nekojiru"></a>
 		<a href="frutigeraeroarchive.neocities.org" target="_blank"><img src="!g/frutigeraeroarchive.png" alt="frutigeraeroarchive"></a>
 
-		<h4 id="fun">for fun / misc</h4>
+		<h4 id="fun">for fun / experiences / misc</h4>
 		<div class="neo">
 			<a href="https://momg.neocities.org" target="_blank"><img src="!g/momg.gif"></a>
 			<a title="hallowdaze" href="https://hallowdaze.neocities.org/" target="_blank"><img src="!g/hallowdaze.gif"></a>
@@ -347,7 +353,9 @@
 		</div>
 
 		<p><a href="https://www.horg.com/" target="_blank">horg.com</a> /
-			<a href="https://how-i-experience-web-today.com/" target="_blank">how i experience web today</a>
+			<a href="https://how-i-experience-web-today.com/" target="_blank">how i experience web today</a> /
+			<a href="https://ifeelsomuchsha.me/" target="_blank">ifeelsomuchsh.me</a> /
+			<a href="https://thehtml.review" target="_blank">thehtml.review</a>
 		</p>
 
 		<h4 id="social">social</h4>
@@ -361,7 +369,7 @@
 			<a title="silly.city webring" href="https://silly.city" target="_blank"><img src="!g/silly.city.gif" alt="silly city"></a>
 		</div>
 
-		<h3><img src="/!g/pix/icon_k_gyo.gif"> 404 graveyard :(</h3>
+		<h3><img src="/!g/pix/icon_k_gyo.gif"> 404 graveyard / moved :(</h3>
 		<p>please do let me know if these sites had their URL changed!</p>
 
 		<div id="grave" class="neo">
@@ -392,6 +400,8 @@
 			<a href="https://sealparty.neocities.org" target="_blank"><img src="!g/sealparty.gif"></a>
 			<a href="https://adilene.net" target="_blank"><img src="!g/adilene.net.png"></a>
 			<a title="pom" href="https://pomelo.lol/" target="_blank"><img src="!g/pomelo.gif"></a>
+			<a href="https://strawberryreverie.neocities.org" target="_blank"><img src="!g/strawberryreverie.gif" alt="strawberryreverie"></a>
+			<a href="https://maria.town" target="_blank"><img src="!g/maria.town.png" alt="maria.town"></a>
 		</div>
 
 		<p><a href="https://gougou772.neocities.org/" target="_blank">gougou772</a> /
