--- a/doqmeat/info/index.html
+++ b/doqmeat/info/index.html
@@ -88,6 +88,7 @@ edited with love by des
         <a href="https://pomelo.lol/" target="_blank"><img src="/sites/!g/pomelo.gif"></a>
         <a href="https://cloverbell.neocities.org/" target="_blank"><img src="/sites/!g/cloverbell.gif"></a>
         <a href="https://tsukinio.dorothea.us/" target="_blank"><img src="/sites/!g/tsukinio.gif" alt="tsukunio"></a>
+        <p><a href="https://chia.design" target="_blank">chia.design</a></p>
       </div>
       <div id="homepage-credit" class="box">
         <h2>homepage v5 credits</h2>
