style savvy screenshots

--- a/doqmeat/vgs/games/infinity-nikki/index.html
+++ b/doqmeat/vgs/games/infinity-nikki/index.html
@@ -74,7 +74,7 @@
       <img src="250728-dye1.jpg" alt="dyeing nikki's hair" width="100%">
       <img src="250728-dye2.jpg" alt="dyeing nikki's hair" width="100%">
     </details>
-    <p>i had no clue what to do woth it so i just dyed it purple and ran with it. i ended up creating an outfit based on the month accesories. i recently got the shrinking outfit too which i love the dress for it so so much!!! i decided to use it for this and made some sort of purple nikki moth fit. so lovely.</p>
+    <p>i had no clue what to do with it so i just dyed it purple and ran with it. i ended up creating an outfit based on the moth accessories. i recently got the shrinking outfit too which i love the dress for it so so much!!! i decided to use it for this and made some sort of purple nikki moth fit. so lovely.</p>
     <img src="250728-moth-nikki-2.jpg" alt="purple moth" width="100%">
     <hr>
     <p><span class="date">20.jul.25</span> still playing through the main story and can i just say that i love the pieceys very very much.</p>
