--- a/doqmeat/vgs/games/style-savvy-styling-star/index.html
+++ b/doqmeat/vgs/games/style-savvy-styling-star/index.html
@@ -44,6 +44,7 @@
 		<div class="info"><b>release date: </b> 2 november 2017</div>
 		<div class="info"><b>developer: </b> syn sophia</div>
 		<div class="info"><b>genre/type: </b> fashion, simulator</div>
+		<nav class="info"><b>navigation:</b> <a href="#logs">logs</a>, <a href="#screenshots">screenshots</a></nav>
 
 		<h3>logs</h3>
 		<p><span class="date">07.jan.25</span> i honestly don't really know what all my bitching was about. new year, new me. learning to forgive and love. been trying to collect all clothing items from <i>stagedive</i> in all 4 games (yes i'm also playing the DS <i>style savvy</i> game <small>need to figure out where the fuck the screenshots from the NDS emulator are located...</small>)</p>
@@ -70,17 +71,33 @@
 		<p><span class="date">03.sep.24</span> started playing this right when i finished playing <a href="../style-savvy-trendsetters/index.html">trendsetters</a>. i asked on my private twitter if i should play <i>styling star</i> or <i>fashion forward</i> next and my only oomf who has played the style savvy games voted for <i>styling star</i> so!!! here i am.</p>
 		<p>first thing i noticed about the game is that there is no 3D option <small>unless my game is bugged but? i don't think that's it.</small> and taking a look at the release date being in 2017 then yeah that makes a LOT of sense, since i know nintendo was barely pushing the 3D gimmick of the 3DS at that time. i don't think i've made it pass the tutorial of the game, but once i have a few more minutes with the game i'll come back to this to write some more of my thoughts.</p>
 		<h3>screenshots</h3>
-		<center>
-			<figure>
-				<img src="241211.bmp" style="max-width:100%" alt="screenshot of a rock outfit. red and black.">
-				<figcaption>i really LOVED this outfit.</figcaption>
-			</figure>
+		<figure>
+			<img src="goth-cutie.JPG" alt="">
+			<figcaption>i really like this character, she's so cute.</figcaption>
+		</figure>
+		<figure>
+			<img src="miku.JPG" alt="miku inspired outfit">
+			<figcaption>a miku inspired outfit!</figcaption>
+		</figure>
+		<figure><img src="loona-mira-promo.JPG" alt="my character pointing at her store">
+			<figcaption>the loona☆mira promo</figcaption>
+		</figure>
+		<figure><img src="cyan-purple.JPG" alt="cyan and purple outfit">
+			<figcaption>i think i ate this.</figcaption>
+		</figure>
+		<figure>
+			<img src="241211.bmp" style="max-width:100%" alt="screenshot of a rock outfit. red and black.">
+			<figcaption>i really LOVED this outfit.</figcaption>
+		</figure>
+		<figure>
 			<img src="241211.JPG" style="max-width:100%" alt="screenshot of my boutique assistant.">
-		</center>
+			<figcaption>my assistant she's a cutie</figcaption>
+		</figure>
 	</main>
 	<footer>
 		<a href="/">home</a> / <a href="/vgs">gaming log</a> / <a href="#">top</a>
 	</footer>
+	<script src="../../!f/sticky.js"></script>
 </body>
 
 </html>
