--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -164,11 +164,11 @@ you're free to take whatever you need from my site, but please refrain from taki
 						<span id="statuscafe-username"></span>
 						<span id="statuscafe-content"></span>
 					</p>
-					<p><span class="title">playing: </span> infinity nikki, overwatch 2, bloodborne</p>
+					<p><span class="title">playing: </span> style savvy: styling star</p>
 					<p><span class="title">watching: </span> the summer hikaru died, jojo's bizarre adventure (part 3)</p>
 					<p><span class="title">reading: </span> <a href="https://javascript.info/" target="_blank" class="outlink">the modern javascript tutorial</a></p>
-					<p><span class="title">working on: </span> <a href="https://roadmap.sh/frontend?s=67a96538f86334348220c214" target="_blank" class="outlink">frontend roadmap</a>, having a fun summer break!</p>
-					<p class="date">last updated: 22.jun.25</p>
+					<p><span class="title">working on: </span> summer vacation journal log, getting ready to start a new uni semester!</p>
+					<p class="date">last updated: 06.aug.25</p>
 				</section>
 				<section class="notepad-boxes" id="webrings">
 					<h3>webrings</h3>
