many pics added to photobook

--- a/doqmeat/photobook/index.html
+++ b/doqmeat/photobook/index.html
@@ -54,8 +54,74 @@ coded with love by des
 						hiii this is a caption</p>
 					</div>
 				</div>
-			</div>
 -->
+
+		<div class="pic phone">
+			<img src="!g/250731-flowers.jpg" alt="phone pics from florida">
+			<img src="!g/250801-plants (1).jpg" alt="phone pics from florida">
+			<img src="!g/250730-florida-trip (1).jpg" alt="phone pics from florida">
+			<img src="!g/250730-florida-trip (13).jpg" alt="phone pics from florida">
+			<img src="!g/250730-florida-trip (2).jpg" alt="phone pics from florida">
+			<img src="!g/250730-florida-trip (4).jpg" alt="phone pics from florida">
+			<img src="!g/250730-florida-trip (5).jpg" alt="phone pics from florida">
+			<img src="!g/250730-florida-trip (6).jpg" alt="phone pics from florida">
+			<img src="!g/250730-florida-trip (7).jpg" alt="phone pics from florida">
+			<img src="!g/250730-florida-trip (8).jpg" alt="phone pics from florida">
+			<img src="!g/250730-florida-trip (9).jpg" alt="phone pics from florida">
+			<img src="!g/250730-florida-trip (10).jpg" alt="phone pics from florida">
+			<img src="!g/250730-florida-trip (11).jpg" alt="phone pics from florida">
+			<img src="!g/250730-florida-trip (12).jpg" alt="phone pics from florida">
+			<img src="!g/250730-florida-trip (14).jpg" alt="phone pics from florida">
+			<img src="!g/250730-florida-trip (15).jpg" alt="phone pics from florida">
+			<img src="!g/250730-florida-trip (16).jpg" alt="phone pics from florida">
+			<img src="!g/250801-train-town (1).jpg" alt="phone pics from florida">
+			<img src="!g/250730-florida-trip (17).jpg" alt="phone pics from florida">
+			<img src="!g/250730-florida-trip (18).jpg" alt="phone pics from florida">
+			<img src="!g/250730-florida-trip (19).jpg" alt="phone pics from florida">
+			<div class="hov">
+				<p class="caption">
+					and finally some pics from my phone of my trip to florida! <br> <b>taken throughout july-august 2025</b> </p>
+			</div>
+		</div>
+
+		<div class="pic instax">
+			<img src="!g/250730-florida-trip-instax (3).jpg" alt="instant picture from my florida trip">
+			<img src="!g/250730-florida-trip-instax (1).jpg" alt="instant picture from my florida trip">
+			<img src="!g/250730-florida-trip-instax (12).jpg" alt="instant picture from my florida trip">
+			<img src="!g/250730-florida-trip-instax (2).jpg" alt="instant picture from my florida trip">
+			<img src="!g/250730-florida-trip-instax (4).jpg" alt="instant picture from my florida trip">
+			<img src="!g/250730-florida-trip-instax (5).jpg" alt="instant picture from my florida trip">
+			<img src="!g/250730-florida-trip-instax (6).jpg" alt="instant picture from my florida trip">
+			<img src="!g/250730-florida-trip-instax (7).jpg" alt="instant picture from my florida trip">
+			<img src="!g/250730-florida-trip-instax (8).jpg" alt="instant picture from my florida trip">
+			<img src="!g/250730-florida-trip-instax (9).jpg" alt="instant picture from my florida trip">
+			<img src="!g/250730-florida-trip-instax (10).jpg" alt="instant picture from my florida trip">
+			<img src="!g/250730-florida-trip-instax (11).jpg" alt="instant picture from my florida trip">
+			<div class="hov">
+				<p class="caption">
+					instax pics from my florida trip! <br> <b>taken throughout july-august 2025</b> </p>
+			</div>
+		</div>
+
+		<div class="pic ds">
+			<img src="/blog/2025/summer-trip/0805-nintendo-world-3ds (1).jpg" alt="florida trip pictures from my 3ds">
+			<img src="/blog/2025/summer-trip/0805-nintendo-world-3ds (11).jpg" alt="florida trip pictures from my 3ds">
+			<img src="/blog/2025/summer-trip/0805-nintendo-world-3ds (2).jpg" alt="florida trip pictures from my 3ds">
+			<img src="/blog/2025/summer-trip/0805-nintendo-world-3ds (4).jpg" alt="florida trip pictures from my 3ds">
+			<img src="!g/250730-florida-trip-3ds (1).JPG" alt="florida trip pictures from my 3ds">
+			<img src="!g/250730-florida-trip-3ds (2).JPG" alt="florida trip pictures from my 3ds">
+			<img src="!g/250730-florida-trip-3ds (3).JPG" alt="florida trip pictures from my 3ds">
+			<img src="!g/250730-florida-trip-3ds (4).JPG" alt="florida trip pictures from my 3ds">
+			<img src="!g/250730-florida-trip-3ds (5).JPG" alt="florida trip pictures from my 3ds">
+			<img src="!g/250730-florida-trip-3ds (6).JPG" alt="florida trip pictures from my 3ds">
+			<img src="!g/250730-florida-trip-3ds (7).JPG" alt="florida trip pictures from my 3ds">
+			<img src="!g/250730-florida-trip-3ds (8).JPG" alt="florida trip pictures from my 3ds">
+			<div class="hov">
+				<p class="caption">
+					3ds pics from my florida trip :p most of them are from super nintendo world lol <br> <b>taken throughout august 2025</b></p>
+			</div>
+		</div>
+		</div>
 
 		<div class="pic phone">
 			<img src="!g/250725-mush.jpg" alt="mushroom">
@@ -465,7 +531,7 @@ coded with love by des
 	<div id="home"><a title="go back to homepage" href="/"><img src="/!g/pix/polaroid_5.gif"></a></div>
 
 	<footer>
-		please <u>don't</u> use my pics without my permission! <img src="/!g/pix/cam-shoot.gif"> <b>last updated: 25.jul.25</b>
+		please <u>don't</u> use my pics without my permission! <img src="/!g/pix/cam-shoot.gif"> <b>last updated: 12.aug.25</b>
 		<br>
 		<b>credit:</b> bg by <a href="http://sozaioukoku.fc2web.com/index.html" target="_blank">sozaioukoku</a> / header font by <a href="https://www.dafont.com/growing-garden-script.font" target="_blank">helotype</a> / border-img from <a href="https://fujoshi.nekoweb.org" target="_blank">mimi</a>!
 		<br>
