updated internet graphics collection

--- a/doqmeat/collection/internet-graphics/index.html
+++ b/doqmeat/collection/internet-graphics/index.html
@@ -249,6 +249,7 @@
 			<img src="!g/nop.gif">
 			<img src="!g/nocookies.jpg">
 			<img src="!g/oldmanyaoi.png">
+			<img src="!g/get-pussy.gif" alt="get pussy now">
 			<a href="https://www.tumblr.com/cartoonishvendor/710638657066926080/drippin-themed-88x31-buttons-middle-animation-is?source=share" target="_blank"><img src="!g/drippin.gif"></a>
 			<img src="!g/handcoded.gif">
 			<a href="https://yesterweb.org/no-to-web3/" target="_blank"><img src="!g/yesterweb-saynotoweb3.gif"></a>
@@ -295,7 +296,7 @@
 	</div>
 
 	<footer>
-		<p>last updated on: <b>10.jul.25</b></p>
+		<p>last updated on: <b>12.aug.25</b></p>
 		<p>page built with materials by <a href="https://foollovers.com/" target="_blank">foollovers</a> and bg by <a href="http://sozaiya405.chu.jp/" target="_blank">sozaiya 405</a></p>
 		<a href="/collection">collection</a> / <a href="/">home</a> / <a href="/sitemap">sitemap</a>
 	</footer>
