--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -75,8 +75,8 @@ you're free to take whatever you need from my site, but please refrain from taki
 			<a class="p" href="/photobook">photobook</a>
 			<a class="p" href="/journal">journal</a>
 			<a class="p" href="/microblog">microblog</a>
-			<a class="p" href="/blog">blog</a>
-			<a class="p" href="/fashion">fashion <img src="!g/pix/updated1.gif" alt="page updated"></a>
+			<a class="p" href="/blog">blog <img src="!g/pix/updated1.gif" alt="page updated"></a>
+			<a class="p" href="/fashion">fashion</a>
 			<a class="p" href="/scrapbook">scrapbook <img src="!g/pix/updated1.gif" alt="page updated"></a>
 			<a class="p" href="/shrines">shrines</a>
 			<a class="p" href="/collection">collections</a>
@@ -84,7 +84,7 @@ you're free to take whatever you need from my site, but please refrain from taki
 
 			<h3>media</h3>
 			<a class="m" href="/music">music</a>
-			<a class="m" href="/vgs">video games <img src="!g/pix/updated1.gif" alt="page updated"></a>
+			<a class="m" href="/vgs">video games</a>
 			<a class="m" href="/tv">tv</a>
 			<a class="m" href="/reading">reading</a>
 
@@ -93,7 +93,7 @@ you're free to take whatever you need from my site, but please refrain from taki
 			<a class="o" href="/faq">FAQ</a>
 
 			<h3>sitely</h3>
-			<a href="/info" class="s">info <img src="!g/pix/new1.gif" alt="new page"></a>
+			<a href="/info" class="s">info</a>
 			<a class="s" href="/sites">button wall</a>
 			<a class="s" href="/notebook">resources <img src="!g/pix/updated1.gif" alt="page updated"></a>
 			<a class="s outlink" href="https://doqmeat.atabook.org/">guestbook</a>
@@ -165,10 +165,10 @@ you're free to take whatever you need from my site, but please refrain from taki
 						<span id="statuscafe-content"></span>
 					</p>
 					<p><span class="title">playing: </span> style savvy: styling star</p>
-					<p><span class="title">watching: </span> the summer hikaru died, jojo's bizarre adventure (part 3)</p>
+					<p><span class="title">watching: </span> the summer hikaru died, wednesday</p>
 					<p><span class="title">reading: </span> <a href="https://javascript.info/" target="_blank" class="outlink">the modern javascript tutorial</a></p>
-					<p><span class="title">working on: </span> summer vacation journal log, getting ready to start a new uni semester!</p>
-					<p class="date">last updated: 06.aug.25</p>
+					<p><span class="title">working on: </span> getting ready to start a new uni semester!</p>
+					<p class="date">last updated: 12.aug.25</p>
 				</section>
 				<section class="notepad-boxes" id="webrings">
 					<h3>webrings</h3>
