various updated including microblog and scrapbook

--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -18,7 +18,7 @@
 
 	<div id="notes" class="bubble">
 		<button onclick="toggleclick('notes')" class="x hide">x</button>
-		<p>notes i write that might get updated with time.</p>
+		<p>silly notes i write that might get updated with time.</p>
 		<ol>
 			<li onclick="toggleNote('note-1')">things i'm frequently saying "there's nothing better in life than..." in my head</li>
 		</ol>
@@ -35,8 +35,9 @@
 				<li>being kissed</li>
 				<li>eating breakfast</li>
 				<li>taking a nap alongside your cat</li>
+				<li>a nice hot bath</li>
 			</ul>
-			<small>last updated on <b>23.jul.25</b></small>
+			<small>last updated on <b>12.aug.25</b></small>
 		</div>
 	</div>
 
@@ -76,10 +77,13 @@
 				<!-- new entry! -->
 				<!-- button format: 'img path','alt','desc' -->
 				<article>
+					<p><b>12.aug.25 - 4pm</b> THE PERSON THAT i bought the camera from never shipped it for some damn reason (their account has good reviews?) and just now the order got cancelled... good bye dream camera. you were literally the perfect color as well. well at least i got my money back.</p>
+				</article>
+				<article>
 					<p><b>21.jul.25 - 11pm</b> i was not born to do 9hr shifts. i was born to chill instead.</p>
 				</article>
 				<article>
-					<p><b>19.jul.25 - 12am</b> bought a digital cam off ebay today!!! i didn't want anything fancy so i went with this used <i>fujifilm finepix ax660</i> in purple <small>(my favorite color!)</small> <button onclick="showPic('!g/250719-bought-digicam.png','a purple fujifilm digital camera','shes\'s so cuteeeeee! i can\'t wait to take pics with it on my trip he he he')">bought-digicam.png</button></p>
+					<p><b>19.jul.25 - 12am</b> <s>bought a digital cam off ebay today!!! i didn't want anything fancy so i went with this used <i>fujifilm finepix ax660</i> in purple <small>(my favorite color!)</small></s> <button onclick="showPic('!g/250719-bought-digicam.png','a purple fujifilm digital camera','shes\'s so cuteeeeee! i can\'t wait to take pics with it on my trip he he he')">bought-digicam.png</button></p>
 				</article>
 				<article>
 					<p><b>16.jul.25 - 10pm</b> been messing around with <a href="https://11ty.dev" target="_blank" class="outlink">eleventy</a> in hopes of getting something together for pages like my <a href="/journal">journal</a> and <a href="/blog">blog</a> but i've been having trouble trying to figure out how i could have eleventy working only in some directories of my website. i tried putting my entire site through eleventy but given how big my site is, it's not something i really fuck with... i fear <i>doqmeat.com</i> will be hand-coded til the day i die. though i def have to say that static site generators are pretty neat! i might move my journal log to a different subdomain at some point so i can run it through 11ty but i ain't doing all that right now. i am thinking of using it for my <a href="https://sinnamota.doqmeat.com" target="_blank">siinamota fansite</a> though...</p>
